k8s/docs/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs
spec:
  rules:
    - http:
        paths:
          - path: /docs/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: docs-http
                port:
                  number: 8011
          - path: /crawlers/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: crawlers
                port:
                  number: 8021
